# napi-segfault

./: Cargo.toml  README.md  fine.ts  index.d.ts  index.js  package.json  segfault.ts  use_after_free.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: js_sender.rs  lib.rs
