[package]
edition = "2021"
name = "napi-segfault"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.5", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
] }
napi-derive = "2.12.2"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
